--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-highcharts": "^5.2.12",
+    "bootstrap3": "^3.3.5",
     "core-js": "^2.4.1",
+    "highcharts": "^6.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
